--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ django-widget-tweaks==1.4.12
 environs[django]==9.5.0
 Pillow==9.3.0
 psycopg2-binary==2.9.5
+python-social-auth==0.3.6
+social-auth-app-django==5.0.0
 sqlparse==0.4.3
 tzdata==2022.7
