--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.6.0
 Django==4.1.4
 django-widget-tweaks==1.4.12
+django-extensions==3.2.1
 environs[django]==9.5.0
 Pillow==9.3.0
 psycopg2-binary==2.9.5
 python-social-auth==0.3.6
+pyOpenSSL==23.0.0
 social-auth-app-django==5.0.0
 sqlparse==0.4.3
 tzdata==2022.7
+werkzeug==2.2.2
